--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -7,10 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout source code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3 # Updated to v3
 
     - name: Push to GitLab
       env:
         GITLAB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
       run: |
         git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/duynguyenvt97/Docs-page.git
+        git push --mirror gitlab
