--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -7,7 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout source code
-      uses: actions/checkout@v3 # Updated to v3
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0 # Fetch all history for all branches and tags
+
+    - name: Configure Git
+      run: |
+        git config --global user.email "duynguyenvt97@gmail.com"
+        git config --global user.name "Gum97"
+
+    - name: Unshallow
+      run: git fetch --prune --unshallow
 
     - name: Push to GitLab
       env:
@@ -15,3 +25,4 @@ jobs:
       run: |
         git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/duynguyenvt97/Docs-page.git
         git push --mirror gitlab
+
