--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -1,6 +1,9 @@
 name: Sync to GitLab
 
-on: [push]
+on:
+  push:
+    branches:
+      - main # hoặc branch bạn muốn đồng bộ
 
 jobs:
   sync:
@@ -9,20 +12,13 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0 # Fetch all history for all branches and tags
-
-    - name: Configure Git
-      run: |
-        git config --global user.email "duynguyenvt97@gmail.com"
-        git config --global user.name "Gum97"
-
-    - name: Unshallow
-      run: git fetch --prune --unshallow
+        fetch-depth: 0 # Lấy toàn bộ lịch sử
 
     - name: Push to GitLab
       env:
         GITLAB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
       run: |
-        git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/duynguyenvt97/Docs-page.git
+        git config --global user.email "duynguyenvt97@gmail.com"
+        git config --global user.name "Gum97"
+        git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/duynguyenvt97/docs.git
         git push --mirror gitlab
-
