--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -1,24 +1,17 @@
 name: Sync to GitLab
 
-on:
-  push:
-    branches:
-      - main # hoặc branch bạn muốn đồng bộ
+on: [push]
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout source code
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0 # Lấy toàn bộ lịch sử
+      uses: actions/checkout@v3 # Updated to v3
 
     - name: Push to GitLab
       env:
         GITLAB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
       run: |
-        git config --global user.email "duynguyenvt97@gmail.com"
-        git config --global user.name "Gum97"
         git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/duynguyenvt97/docs.git
         git push --mirror gitlab
